[tool.poetry]
name = "fmappy"
version = "0.1.0"
description = "Functor for Python, with a Pythonic UX"
authors = ["xtofl <kristoffel.pirard@gmail.com>"]
license = "MIT"
packages = [
    {include = "fmappy", from = "src"},
]
homepage = "https://github.com/xtofl/fmappy"
readme = "README.md"
repository = "https://github.com/xtofl/fmappy"
documentation = "https://github.com/xtofl/fmappy"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",

    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
